[tool.poetry]
name = "fused_30days"
version = "0.1.0"
description = "Fused 30 Days Map Challenge 2024"
authors = [
    "Maxime Lenormand <max@fused.io>",
    "Plinio Guzman <plinio@fused.io>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"
pandas = "^2.2.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
