[tool.poetry]
name = "fused_30days"
version = "0.1.0"
description = "Fused 30 Days Map Challenge 2024"
authors = [
    "Maxime Lenormand <max@fused.io>",
    "Plinio Guzman <plinio@fused.io>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
geopandas = "^1.0.1"
streamlit-folium = "^0.23.1"
fused = "^1.11.0"
pydeck = "^0.9.1"
pyproj = "^3.7.0"
shapely = "^2.0.6"
imageio = "^2.36.0"
matplotlib = "^3.9.2"
pydeck-carto = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
